# trust-evidence-protocol

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: README.md  REPOSITORY_ORGANIZATION.md  TEP_ACADEMIC_RESEARCH_PLAN.md  TEP_CORE_BASELINE.md  TEP_CORE_REWRITE_CONTEXT.md  TEP_DATA_MODEL.md  TEP_DEVELOPER_REFERENCE.md  TEP_PLANNING_CURIOSITY_RESEARCH.md  TEP_REASONING_RESEARCH.md  TEP_RESEARCH_MAP.md
docs/dev/: ANTI_NIH_TOOLING_ROUND.md  FIRST_INTEGRATION_STACK.md  README.md  REPOSITORY_ORGANIZATION.md  TEP_0_4_0_AGENT_INTERFACE_CONTRACTS.md  TEP_0_4_0_CURRENT_SURFACE_AUDIT.md  TEP_0_4_0_FUNCTIONAL_SPEC.md  TEP_0_4_0_IMPLEMENTATION_DECISIONS.md  TEP_0_4_0_MAP_RECORDS.md  TEP_0_4_0_MECHANICS_REQUIREMENTS.md  TEP_0_4_0_REBUILD_PLAN.md  TEP_0_4_0_SCHEMA_MIGRATIONS.md  TEP_0_4_10_RELEASE_NOTES.md  TEP_0_4_11_RELEASE_NOTES.md  TEP_0_4_12_RELEASE_NOTES.md  TEP_0_4_13_RELEASE_NOTES.md  TEP_0_4_14_RELEASE_NOTES.md  TEP_0_4_15_RELEASE_NOTES.md  TEP_0_4_16_RELEASE_NOTES.md  TEP_0_4_1_RELEASE_NOTES.md  TEP_0_4_2_RELEASE_NOTES.md  TEP_0_4_3_RELEASE_NOTES.md  TEP_0_4_4_RELEASE_NOTES.md  TEP_0_4_5_RELEASE_NOTES.md  TEP_0_4_6_RELEASE_NOTES.md  TEP_0_4_7_RELEASE_NOTES.md  TEP_0_4_8_RELEASE_NOTES.md  TEP_0_4_9_RELEASE_NOTES.md  TEP_API_FIRST_CONTRACT.md  TEP_CORE_BASELINE.md  TEP_CORE_REWRITE_CONTEXT.md  TEP_DEVELOPER_REFERENCE.md  TEP_MAP_GRAPH_V1.md  (+1 more)
scripts/: install-local-plugin.sh
tests/: Dockerfile  README.md  case_output.schema.json  codex_harness.py  path_map_support.py  plugin_runtime_output.schema.json  run_codex_exec.sh  smoke.sh  trust_test_support.py
(+227 files in other folders)
